fixed weather app on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2470,11 +2470,11 @@ input, select, textarea {
 	
 	.weather-card {
 		background-color: rgb(93, 197, 248);
-		border-radius: 20px;
-		padding: 20px;
-		box-shadow: 0 0 30px rgb(0, 0, 0);
+		border-radius: 10px;
+		padding: 10px;
+		box-shadow: 0 0 10px rgb(0, 0, 0);
 		transition: transform 0.3s ease-in-out;
-		width: 380px;
+		width: 300px;
 		
 	}
 	
